@@ -4,6 +4,8 @@ version ? (??/??/????):
 
   - contrib/customer: removed directories checking (alec)
   - changed access right definition for LMS configuration (alec)
+  - security bugfix: plain text passwords aren't stored in session (alec)
+  - security bugfix: session is excluded from database backup (alec)
 
 version 1.7.2 Doci (2005-08-13):
 
